[project]
name = "hypyp"
version = "0.5.0b10"
description = "The Hyperscanning Python Pipeline."
readme = "README.md"
license = "BSD-3-Clause"
classifiers=[
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering"]
keywords=["hyperscanning", "neuroscience", "pipeline", "statistics", "visualization"]

[project.urls]
Homepage = "https://github.com/ppsp-team/HyPyP"
Repository = "https://github.com/ppsp-team/HyPyP"
Documentation = "https://hypyp.readthedocs.io"

[tool.poetry]
packages = [
    {include = "hypyp"},
    {include = "hypyp/ext/mpl3d"},
    {include = "hypyp/fnirs"},
    {include = "hypyp/shiny"},
    {include = "hypyp/wavelet"},
    {include = "hypyp/xdf"}
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
autoreject = ">=0.4.3"
matplotlib = "^3.7.2"
pandas = "^2.0.3"
meshio = "^5.3.4"
tqdm = "^4.46.0"
scipy = "^1.11.1"
mne = ">=1.3"
h5io = "^0.1.7"
mistune = ">=2.0.4"
future = ">=0.18.3"
certifi = ">=2022.12.07"
importlib-resources = "^6.0.0"
statsmodels = "^0.14.4"
numpy = "^2.2.3"
black = "^25.1.0"
pyarrow = "^20.0.0"
seaborn = "^0.13.2"
mne-connectivity = "^0.7.0"
scikit-image = "^0.25.2"
pywavelets = "^1.8.0"
pyxdf = "^1.17.0"
urllib3 = ">=2.5.0"
requests = ">=2.32.4"
pillow = ">=11.3.0"
snirf = "^0.8.0"

[tool.poetry.group.dev.dependencies]
mkdocs = ">=1.3.0"
mkdocs-material = ">=8.2.15"
pylint = "^2.4.4"
widgetsnbextension = "^3.5.1"
ipywidgets = "^7.5.1"
livereload = "^2.6.3"
ipykernel = "^6.19.4"
pytest = ">=7.2.0"
pytest-mock = "^3.14.0"
pytest-watch = "^4.2.0"
mkdocstrings = ">=0.20.0"
mkdocstrings-python-legacy = "^0.2.3"
jupyterlab = "^4.3.5"
mkdocs-include-markdown-plugin = "^7.1.5"
mkdocstrings-python = ">=1.1.0"
tabulate = "^0.9.0"
notebook = "^7.4.3"

[tool.poetry.group.shiny.dependencies]
shiny = "^1.1.0"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
packages = ["hypyp"]


