[project]
name = "hypyp"
version = "0.5.0b17"
description = "The Hyperscanning Python Pipeline."
readme = "README.md"
license = "BSD-3-Clause"
classifiers=[
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering"]
keywords=["hyperscanning", "neuroscience", "pipeline", "statistics", "visualization"]
requires-python = ">=3.12,<3.14"
dependencies = [
  "autoreject>=0.4.3",
  "matplotlib>=3.7.2",
  "pandas>=2.0.3",
  "meshio>=5.3.4",
  "tqdm>=4.46.0",
  "scipy>=1.11.1,<1.17.0",
  "mne>=1.3",
  "h5io>=0.1.7",
  "mistune>=2.0.4",
  "certifi>=2022.12.07",
  "importlib-resources>=6.0.0",
  "statsmodels>=0.14.4",
  "numpy>=2.2.3",
  "black>=25.1.0",
  "pyarrow>=20.0.0",
  "seaborn>=0.13.2",
  "mne-connectivity>=0.7.0",
  "scikit-image>=0.25.2",
  "pywavelets>=1.8.0",
  "pyxdf>=1.17.0",
  "urllib3>=2.5.0",
  "requests>=2.32.4",
  "pillow>=11.3.0",
  "snirf>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/ppsp-team/HyPyP"
Repository = "https://github.com/ppsp-team/HyPyP"
Documentation = "https://hypyp.readthedocs.io"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "mkdocs>=1.3.0",
    "mkdocs-material>=8.2.15",
    "pylint>=2.4.4",
    "widgetsnbextension>=3.5.1",
    "ipywidgets>=7.5.1",
    "livereload>=2.6.3",
    "ipykernel>=6.19.4",
    "pytest>=7.2.0",
    "pytest-mock>=3.14.0",
    "pytest-watch>=4.2.0",
    "mkdocstrings>=0.20.0",
    "mkdocstrings-python-legacy>=0.2.3",
    "jupyterlab>=4.3.5",
    "mkdocs-include-markdown-plugin>=7.1.5",
    "mkdocstrings-python>=1.1.0",
    "tabulate>=0.9.0",
    "notebook>=7.4.3",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hypyp"]
