[project]
name = "hypyp"
version = "0.5.0b18"
description = "The Hyperscanning Python Pipeline."
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
]
keywords = ["hyperscanning", "neuroscience", "pipeline", "statistics", "visualization"]

dependencies = [
    "autoreject>=0.4.3",
    "certifi>=2022.12.07",
    "importlib-resources>=6.0.0",
    "matplotlib>=3.7.2",
    "meshio>=5.3.4",
    "mistune>=2.0.4",
    "mne>=1.3",
    "mne-connectivity>=0.7.0",
    "numpy>=2.2.3",
    "pandas>=2.0.3",
    "pillow>=11.3.0",
    "pyarrow>=20.0.0",
    "pywavelets>=1.8.0",
    "pyxdf>=1.17.0",
    "requests>=2.32.4",
    "scikit-image>=0.25.2",
    "scipy>=1.11.1,<1.17.0",
    "seaborn>=0.13.2",
    "snirf>=0.8.0",
    "statsmodels>=0.14.4",
    "tqdm>=4.46.0",
    "urllib3>=2.5.0",
]

[project.optional-dependencies]
shiny = ["shiny>=1.1.0"]
numba = ["numba>=0.60.0"]
torch = ["torch>=2.0.0"]

[project.urls]
Homepage = "https://github.com/ppsp-team/HyPyP"
Repository = "https://github.com/ppsp-team/HyPyP"
Documentation = "https://hypyp.readthedocs.io"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.19.4",
    "ipywidgets>=7.5.1",
    "jupyterlab>=4.3.5",
    "livereload>=2.6.3",
    "mkdocs>=1.3.0",
    "mkdocs-include-markdown-plugin>=7.1.5",
    "mkdocs-material>=8.2.15",
    "mkdocstrings>=0.20.0",
    "mkdocstrings-python>=1.1.0",
    "mkdocstrings-python-legacy>=0.2.3",
    "notebook>=7.4.3",
    "pylint>=2.4.4",
    "pyqt6>=6.10.2",
    "pytest>=7.2.0",
    "pytest-mock>=3.14.0",
    "pytest-watch>=4.2.0",
    "tabulate>=0.9.0",
    "widgetsnbextension>=3.5.1",
]
benchmark = [
    "doit>=0.36.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hypyp*"]

[tool.setuptools.package-data]
hypyp = ["data/*.obj"]
